include/autoPrim.h

typedef LONG DISPID;
typedef struct tagEXCEPINFO
{
    unsigned short wCode;
    unsigned short wReserved;
    BSTR bstrSource;
    BSTR bstrDescription;
    BSTR bstrHelpFile;
    unsigned long dwHelpContext;
    void *pvReserved;
    HRESULT(STDCALL *pfnDeferredFillIn)(struct tagEXCEPINFO *);
    SCODE scode;
} EXCEPINFO;
typedef struct IDispatch IDispatch;
typedef struct tagSAFEARRAY SAFEARRAY;
typedef struct tagVARIANT VARIANT;
struct tagVARIANT
{
    union {
        struct __tagVARIANT
        {
            VARTYPE vt;
            WORD wReserved1;
            WORD wReserved2;
            WORD wReserved3;
            union {
                LONG lVal;
                BYTE bVal;
                SHORT iVal;
                FLOAT fltVal;
                double dblVal;
                VARIANT_BOOL boolVal;
                _VARIANT_BOOL bool;
                SCODE scode;
                CY cyVal;
                DATE date;
                BSTR bstrVal;
                IUnknown *punkVal;
                IDispatch *pdispVal;
                SAFEARRAY *parray;
                BYTE *pbVal;
                SHORT *piVal;
                LONG *plVal;
                FLOAT *pfltVal;
                double *pdblVal;
                VARIANT_BOOL *pboolVal;
                _VARIANT_BOOL *pbool;
                SCODE *pscode;
                CY *pcyVal;
                DATE *pdate;
                BSTR *pbstrVal;
                IUnknown **ppunkVal;
                IDispatch **ppdispVal;
                SAFEARRAY **pparray;
                VARIANT *pvarVal;
                PVOID byref;
                CHAR cVal;
                USHORT uiVal;
                ULONG ulVal;
                INT intVal;
                UINT uintVal;
                DECIMAL *pdecVal;
                CHAR *pcVal;
                USHORT *puiVal;
                ULONG *pulVal;
                INT *pintVal;
                UINT *puintVal;
            } n3;
        } n2;
        DECIMAL decVal;
    } n1;
};
typedef VARIANT VARIANTARG;
typedef struct IDispatchVtbl
{
    HRESULT(STDCALL *QueryInterface)
    (IDispatch *This, REFIID riid, void **ppvObject);

    ULONG(STDCALL *AddRef)(IDispatch *This);

    ULONG(STDCALL *Release)(IDispatch *This);

    HRESULT(STDCALL *GetTypeInfoCount)
    (IDispatch *This, UINT *pctinfo);

    HRESULT(STDCALL *GetTypeInfo)
    (IDispatch *This, UINT iTInfo, LCID lcid, ITypeInfo **ppTInfo);

    HRESULT(STDCALL *GetIDsOfNames)
    (IDispatch *This, REFIID riid, LPOLESTR *rgszNames, UINT cNames, LCID lcid, DISPID *rgDispId);

    HRESULT(STDCALL *Invoke)
    (IDispatch *This, DISPID dispIdMember, REFIID riid, LCID lcid, WORD wFlags, DISPPARAMS *pDispParams,
     VARIANT *pVarResult, EXCEPINFO *pExcepInfo, UINT *puArgErr);

} IDispatchVtbl;
struct IDispatch
{
    struct IDispatchVtbl *lpVtbl;
};
extern void STDCALL VariantInit(VARIANTARG *pvarg);
extern int readVariantTag(VARIANT *v);
extern void writeVarOptional(VARIANT *v);
extern void freeVariants(int count, VARIANT *p);
extern HRESULT dispatchGetMemberID(IDispatch *obj, BSTR name, LCID lcid, DISPID *dispid);
extern char *getExcepInfoMessage(EXCEPINFO *info);
extern void freeExcepInfo(EXCEPINFO *info);
extern HRESULT dispatchInvoke(IDispatch *obj, DISPID dispid, LCID lcid, BOOL isfunction, unsigned flags, int cargs,
                              int cargsout, VARIANT *args, VARIANT *argsout, EXCEPINFO **info);
// extern
// HRESULT
// STDCALL
// SafeArrayDestroy
//  	( /*[in]*/SAFEARRAY* psa
// 	);

extern HRESULT primCopyVARIANT(VARIANT *p1, VARIANT *p2);